--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "file manager",
+  "name": "file-manager",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "keywords": [
-    "file",
+    "node.js",
     "manager"
   ],
-  "author": "Anastasiia Perova",
+  "author": "little-plumelet",
   "license": "ISC"
 }
