feat: add welcome/exit prompts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "file-manager",
   "version": "1.0.0",
-  "main": "main.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "type": "module",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js"
   },
